@@ -101,13 +101,13 @@ indicate_mechs_test_SOURCES = indicate_mechs_test.c
 nonterminated_export_cred_test_SOURCES = nonterminated_export_cred_test.c
 
 testcred.key:
-	openssl genrsa -out $@ 1024 && chmod 0600 $@
+	umask 077; openssl genrsa -out $@ 1024
 
 testcred.req: testcred.key
 	printf "NA\nNA\nNA\nNA\nNA\nNA\nNA\n\n\n\n" | openssl req -new -key $< -out $@
 
 testcred.cert: testcred.req testcred.key
-	openssl x509 -req -days 365 -in testcred.req -signkey testcred.key -out $@
+	umask 022; openssl x509 -req -days 365 -in testcred.req -signkey testcred.key -out $@
 
 testcredlink: testcred.cert
 	linkname="`openssl x509 -hash -noout -in testcred.cert`.0"; \
